Added new close button image to res

--- a/android/app/src/main/res/layout/floating_bubble_layout.xml
+++ b/android/app/src/main/res/layout/floating_bubble_layout.xml
@@ -18,10 +18,10 @@
 
     <!--Close button-->
     <ImageView
-            android:id="@+id/close_btn"
+            android:id="@+id/close_button"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_marginLeft="40dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/cancel"
             tools:ignore="ContentDescription"/>
 </com.youtubedownloader.SpringRelativeLayout>
