--- a/android/app/src/main/res/layout/floating_bubble_layout.xml
+++ b/android/app/src/main/res/layout/floating_bubble_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/button_transparent"
             tools:ignore="ContentDescription"/>
 
     <!--Close button-->
@@ -22,6 +22,6 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_marginLeft="40dp"
-            android:src="@mipmap/cancel"
+            android:src="@drawable/cancel"
             tools:ignore="ContentDescription"/>
 </com.youtubedownloader.SpringRelativeLayout>
