--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name ="android:windowBackground">@color/transparent</item>
+        <!--<item name ="android:windowBackground">@color/transparent</item>-->
     </style>
 
     <!-- Transparent the theme here -->
